--- a/src/main/res/values/strings.xml
+++ b/src/main/res/values/strings.xml
@@ -2,7 +2,7 @@
     <string name="appName" translatable="false">Echtzeyt</string>
     <string name="appVersion" translatable="false" />
     <string name="appNameSettings">Settings</string>
-    <string name="appNameMap">Map</string>
+    <string name="appNameLicenses">Licenses</string>
     <string name="widgetName" translatable="false">Echtzeyt Widget</string>
     <string name="widgetNameSettings">Configure</string>
     <string name="widgetDescription">Realtime information in a small widget</string>
@@ -38,6 +38,7 @@
     <string name="stringEmpty" translatable="false"> </string>
     <string name="btnBookmarksDescription">Show bookmarks</string>
     <string name="btnSettingsDescription">Settings</string>
+    <string name="btnLicensesDescription">Licenses</string>
     <string name="btnDonateDescription">Support me</string>
     <string name="btnMessageDescription">Feedback</string>
     <string name="btnAnnouncementDescription">Announcement</string>
@@ -55,6 +56,7 @@
         <item>30 seconds</item>
         <item>1 minute</item>
     </string-array>
+    <string name="settingsMapUseMobileData">Use mobile data to load map</string>
     <string name="updateNotYet">Not updated yet!</string>
     <string name="updateLast">Last updated:</string>
     <string name="updateEmpty">Nothing to see here!</string>
@@ -79,11 +81,31 @@
     <string name="sendLogsNo">No</string>
     <string name="mapStationConfirm">Use selected station</string>
     <string name="mapBack">Go back</string>
+    <string name="mapMobileAllowTitle">Allow mobile data?</string>
+    <string name="mapMobileAllowText">Some parts of the map seem to not be able to load. Do you want to allow to use your mobile data to download map data? You can change this behaviour in the settings at any time.</string>
+    <string name="mapMobileAllowPermanent">Yes, permanently</string>
+    <string name="mapMobileAllowTemporary">Only this time</string>
+    <string name="mapMobileAllowNo">No</string>
     <string name="mapLocationEnableTitle">Enable your Location</string>
     <string name="mapLocationEnableText">You don\'t have your location enabled. To show where you are currently located, the location is needed. Please enable your location using your status bar or by going into your settings.</string>
     <string name="mapLocationEnableSettings">Go to Settings</string>
     <string name="mapLocationEnableDone">Done</string>
     <string name="mapLocationEnableCancel">Cancel</string>
+    <string name="mapOutsidePermittedArea">You seem to be outside of the covered area</string>
+    <string name="mapNoGpsProviders">No location providers could be found. Does your device have GPS functionality?</string>
+    <string name="mapCopyright" translatable="false">&#169; <a href="https://www.openstreetmap.org/copyright">OpenStreetMap</a></string>
+    <string name="licenseBase">This App is based on the <a href="https://github.com/maddinkunze/echtzeyt">Echtzeyt</a> Framework.</string>
+    <string name="licenseSelf">The App itself is published under the Apache License 2.0.</string>
+    <string name="licenseLibrariesTitle">The following libraries are currently used:</string>
+    <string name="licenseLibraries"><ul>
+        <li><a href="https://github.com/osmdroid/osmdroid">OSMDroid</a> (Apache License 2.0)</li>\n
+        <li><a href="https://github.com/maddinkunze/transportapi">TransportAPI</a></li>
+    </ul></string>
+    <string name="licenseAdditionalTitle">Furthermore, the following sources were used in some way, shape, or form:</string>
+    <string name="licenseAdditional"><ul>
+        <li>Map Data by <a href="https://openstreetmap.org/">OpenStreetMap</a> and contributors</li>\n
+        <li>Some icons from <a href="https://svgrepo.com/">SVGRepo</a> (PD, CC0 or similar license)</li>
+    </ul></string>
     <string name="_libraryEchtzeytBasedOn">based on\u0020</string>
     <string name="_libraryEchtzeytName" translatable="false">Echtzeyt</string>
     <string name="_libraryEchtzeytVersion" translatable="false" />
