finalised how fragments will look and work, tested the fragments in the settings menu; fixed a bug where the fragment would try to restore its previous state and mess up internal states; deleted now unnecessary icon ic_license since this will be part of the settings menu; created and filled fragments for general, realtime, maps and about, created fragment for trips -> depends on the implementation of trips

--- a/src/main/res/values-de/strings.xml
+++ b/src/main/res/values-de/strings.xml
@@ -41,9 +41,14 @@
         <item>30 Sekunden</item>
         <item>1 Minute</item>
     </string-array>
+    <string name="menuSettingsGeneral">Allgemein</string>
+    <string name="menuSettingsRealtime">Echtzeit</string>
+    <string name="menuSettingsTrips">Verbindungen</string>
+    <string name="menuSettingsMap">Karte</string>
+    <string name="menuSettingsAbout">Über</string>
     <string name="updateNotYet">Noch nicht aktualisiert!</string>
     <string name="updateLast">"Letzte Aktualisierung: "</string>
-    <string name="settingsAutoDark">Systemthema übernehmen</string>
+    <string name="settingsAutoDark">Systemfarben übernehmen</string>
     <string name="btnLikeDescription">Station zu Lesezeichen hinzufügen</string>
     <string name="btnBookmarksDescription">Lesezeichen anzeigen</string>
     <string name="updateEmpty">Hier gibt es nichts zu sehen!</string>
