majorly refactored map and marker system, works and does not lag in current state, (TODO:) one lag spike the moment a big model is loaded in, implemented build system for custom map creation and minification including a custom osmosis plugin, fixed some other minor bugs

--- a/src/main/res/values/strings.xml
+++ b/src/main/res/values/strings.xml
@@ -171,6 +171,6 @@
     <string name="_libraryEchtzeytVersion" translatable="false" />
 
     <string name="urlMapDownload" translatable="false">https://lol</string>
-    <item name="fileMapRaw" type="raw">@raw/chemnitz</item>
-    <string name="fileMapExtracted" translatable="false">extracted.map</string>
+    <item name="fileMapRaw" type="raw" />
+    <string name="fileMapExtracted" translatable="false" />
 </resources>
